match routes to swagger
