# src/controllers/match-controllers.ts
@@ -3,14 +3,14 @@ import { MatchUseCase } from '../use-cases';
 import { Match, MatchInput, MatchQueries, MatchScores } from '../entities';
 
 export class MatchController {
-  constructor(private fixturesUseCase: MatchUseCase) {}
+  constructor(private matchUseCase: MatchUseCase) {}
 
   async add(req: Request, res: Response, next: NextFunction) {
     const mtParam: MatchInput = req.body;
 
     try {
       new Match(mtParam);
-      const match = await this.fixturesUseCase.add(mtParam);
+      const match = await this.matchUseCase.add(mtParam);
       return res.status(201).json(match);
     } catch (error) {
       next(error);
@@ -18,11 +18,11 @@ export class MatchController {
   }
 
   async findByLeague(req: Request, res: Response, next: NextFunction) {
-    const { leagueId }: MatchQueries = req.params;
+    const { leagueId } = req.params;
     const { round }: MatchQueries = req.query;
     try {
-      const match = await this.fixturesUseCase.findByLeague({
-        leagueId,
+      const match = await this.matchUseCase.findByLeague({
+        leagueId: Number(leagueId),
         round,
       });
       return res.status(200).json(match);
@@ -32,12 +32,10 @@ export class MatchController {
   }
 
   async findByTeam(req: Request, res: Response, next: NextFunction) {
-    const { teamId }: MatchQueries = req.params;
-    const { leagueId }: MatchQueries = req.body;
+    const { teamId } = req.params;
     try {
-      const match = await this.fixturesUseCase.findByTeam({
-        teamId,
-        leagueId,
+      const match = await this.matchUseCase.findByTeam({
+        teamId: Number(teamId),
       });
       return res.status(200).json(match);
     } catch (error) {
@@ -46,19 +44,19 @@ export class MatchController {
   }
 
   async updateScores(req: Request, res: Response, next: NextFunction) {
-    const { id }: MatchScores = req.params;
+    const { id } = req.params;
     const { homeScore, awayScore, homePenalty, awayPenalty }: MatchScores =
       req.body;
 
     try {
       const iMatch = new MatchScores(
-        id,
+        Number(id),
         homeScore,
         awayScore,
         homePenalty,
         awayPenalty
       );
-      const match = await this.fixturesUseCase.updateScores(iMatch);
+      const match = await this.matchUseCase.updateScores(iMatch);
       return res.status(200).json(match);
     } catch (error) {
       next(error);
@@ -67,7 +65,7 @@ export class MatchController {
 
   async groupByDates(req: Request, res: Response, next: NextFunction) {
     try {
-      const match = await this.fixturesUseCase.groupByDates();
+      const match = await this.matchUseCase.groupByDates();
       return res.status(200).json(match);
     } catch (error) {
       next(error);
@@ -77,7 +75,7 @@ export class MatchController {
   async delete(req: Request, res: Response, next: NextFunction) {
     try {
       const { id } = req.params;
-      const match = await this.fixturesUseCase.delete(Number(id));
+      const match = await this.matchUseCase.delete(Number(id));
       return res.status(200).json(match);
     } catch (error) {
       next(error);
@@ -89,10 +87,7 @@ export class MatchController {
     const { startDate }: MatchInput = req.body;
 
     try {
-      const match = await this.fixturesUseCase.reschedule(
-        Number(id),
-        startDate
-      );
+      const match = await this.matchUseCase.reschedule(Number(id), startDate);
       return res.status(200).json(match);
     } catch (error) {
       next(error);
